namespace Tutoring.Domain.Identity;

public enum UserRole
{
    Tutor = 0,
    Student = 1,
    Administrator = 2
}
